# kotlinangle

./: README.md  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
kotlinangle/: build.gradle.kts
kotlinangle/src/androidMain/kotlin/org/prismatic/kotlinangle/: AngleWrapper.android.kt  OpusIntBuffer.android.kt
kotlinangle/src/androidMain/kotlin/org/prismatic/kotlinangle/OpusBuffer/: OpusBuffer.android.kt  OpusIntBuffer.android.kt
kotlinangle/src/androidMain/kotlin/org/prismatic/kotlinangle/opuscopy/: OpusView.android.kt
kotlinangle/src/commonMain/kotlin/org/prismatic/kotlinangle/: AngleWrapper.kt  OpusBuffer.kt  OpusByteBuffer.kt  OpusFloatBuffer.kt  OpusIntBuffer.kt
kotlinangle/src/commonMain/kotlin/org/prismatic/kotlinangle/OpusBuffer/: OpusBuffer.kt  OpusByteBuffer.kt  OpusFloatBuffer.kt  (+1 more)
kotlinangle/src/desktopMain/kotlin/org/prismatic/kotlinangle/: AngleNative.kt  AngleWrapper.desktop.kt  OpusBuffer.desktop.kt  OpusByteBuffer.desktop.kt  OpusFloatBuffer.desktop.kt  OpusIntBuffer.desktop.kt
kotlinangle/src/desktopMain/resources/: libPrismAngleLibrary.dylib
kotlinangle/src/macOSMain/kotlin/org/prismatic/kotlinangle/: AngleNative.kt
kotlinangle/src/main/cpp/: CMakeLists.txt  PrismAngleLib.cpp  PrismAngleLib.h  kotlinangle.cpp  run-build.sh
kotlinangle/src/main/cpp/jni/: AngleNative_JNI.c  PrismAngleNative.cpp  PrismAngleNative.h
kotlinangle/src/main/cpp/jniLibs/macOS/: libEGL.dylib
kotlinangle/src/nativeMain/kotlin/org/prismatic/kotlinangle/: OpusByteBuffer.native.kt  OpusFloatBuffer.native.kt
kotlinangle/src/wasmJsMain/kotlin/org/prismatic/kotlinangle/: AngleWrapper.wasmJs.kt  OpusBuffer.wasmJs.kt  OpusByteBuffer.wasmJs.kt  OpusFloatBuffer.wasmJs.kt  OpusIntBuffer.wasmJs.kt
kotlinangle/src/wasmJsMain/resources/: index.html
sample/composeApp/: build.gradle.kts
sample/composeApp/src/androidMain/: AndroidManifest.xml
sample/composeApp/src/androidMain/res/values/: strings.xml
sample/iosApp/Configuration/: Config.xcconfig
sample/iosApp/iosApp.xcodeproj/: project.pbxproj
sample/server/: build.gradle.kts
sample/shared/: build.gradle.kts
(+72 files in other folders)
